; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/diff/src/extr_ed.c_print_ed_hunk.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/diff/src/extr_ed.c_print_ed_hunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8** }
%struct.change = type { i32 }

@files = common dso_local global %struct.TYPE_3__* null, align 8
@outfile = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%c\0A\00", align 1
@change_letter = common dso_local global i32* null, align 8
@OLD = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"..\0A.\0As/.//\0Aa\0A\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.3 = private unnamed_addr constant [3 x i8] c".\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.change*)* @print_ed_hunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_ed_hunk(%struct.change* %0) #0 {
  %2 = alloca %struct.change*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.change* %0, %struct.change** %2, align 8
  %9 = load %struct.change*, %struct.change** %2, align 8
  %10 = call i32 @analyze_hunk(%struct.change* %9, i64* %3, i64* %4, i64* %5, i64* %6)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  br label %79

14:                                               ; preds = %1
  %15 = call i32 (...) @begin_output()
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** @files, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i64 0
  %18 = load i64, i64* %3, align 8
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @print_number_range(i8 signext 44, %struct.TYPE_3__* %17, i64 %18, i64 %19)
  %21 = load i32, i32* @outfile, align 4
  %22 = load i32*, i32** @change_letter, align 8
  %23 = load i32, i32* %7, align 4
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = call i32 (i32, i8*, ...) @fprintf(i32 %21, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %26)
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* @OLD, align 4
  %30 = icmp ne i32 %28, %29
  br i1 %30, label %31, label %79

31:                                               ; preds = %14
  %32 = load i64, i64* %5, align 8
  store i64 %32, i64* %8, align 8
  br label %33

33:                                               ; preds = %73, %31
  %34 = load i64, i64* %8, align 8
  %35 = load i64, i64* %6, align 8
  %36 = icmp ule i64 %34, %35
  br i1 %36, label %37, label %76

37:                                               ; preds = %33
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** @files, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i64 1
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load i8**, i8*** %40, align 8
  %42 = load i64, i64* %8, align 8
  %43 = getelementptr inbounds i8*, i8** %41, i64 %42
  %44 = load i8*, i8** %43, align 8
  %45 = getelementptr inbounds i8, i8* %44, i64 0
  %46 = load i8, i8* %45, align 1
  %47 = sext i8 %46 to i32
  %48 = icmp eq i32 %47, 46
  br i1 %48, label %49, label %64

49:                                               ; preds = %37
  %50 = load %struct.TYPE_3__*, %struct.TYPE_3__** @files, align 8
  %51 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %50, i64 1
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 0
  %53 = load i8**, i8*** %52, align 8
  %54 = load i64, i64* %8, align 8
  %55 = getelementptr inbounds i8*, i8** %53, i64 %54
  %56 = load i8*, i8** %55, align 8
  %57 = getelementptr inbounds i8, i8* %56, i64 1
  %58 = load i8, i8* %57, align 1
  %59 = sext i8 %58 to i32
  %60 = icmp eq i32 %59, 10
  br i1 %60, label %61, label %64

61:                                               ; preds = %49
  %62 = load i32, i32* @outfile, align 4
  %63 = call i32 (i32, i8*, ...) @fprintf(i32 %62, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  br label %72

64:                                               ; preds = %49, %37
  %65 = load %struct.TYPE_3__*, %struct.TYPE_3__** @files, align 8
  %66 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %65, i64 1
  %67 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %66, i32 0, i32 0
  %68 = load i8**, i8*** %67, align 8
  %69 = load i64, i64* %8, align 8
  %70 = getelementptr inbounds i8*, i8** %68, i64 %69
  %71 = call i32 @print_1_line(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0), i8** %70)
  br label %72

72:                                               ; preds = %64, %61
  br label %73

73:                                               ; preds = %72
  %74 = load i64, i64* %8, align 8
  %75 = add i64 %74, 1
  store i64 %75, i64* %8, align 8
  br label %33

76:                                               ; preds = %33
  %77 = load i32, i32* @outfile, align 4
  %78 = call i32 (i32, i8*, ...) @fprintf(i32 %77, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0))
  br label %79

79:                                               ; preds = %13, %76, %14
  ret void
}

declare dso_local i32 @analyze_hunk(%struct.change*, i64*, i64*, i64*, i64*) #1

declare dso_local i32 @begin_output(...) #1

declare dso_local i32 @print_number_range(i8 signext, %struct.TYPE_3__*, i64, i64) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @print_1_line(i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
